deployments/k8s/srv_user/network/destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: srv-user
spec:
  host: srv-user
  subsets:
  - name: v1
    labels:
      version: v1
#  - name: v2
#    labels:
#      version: v2
#  - name: v3
#    labels:
#      version: v3
