deployments/k8s/srv_user/network/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: srv-user
spec:
  hosts:
  - srv-user
  http:
  - route:
    - destination:
        host: srv-user
        subset: v1
